--- a/Core/Analystor.Nishomi.Core/Analystor.Nishomi.Core.csproj
+++ b/Core/Analystor.Nishomi.Core/Analystor.Nishomi.Core.csproj
@@ -1,12 +1,16 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Library\" />
-    <Folder Include="Models\" />
+    <PackageReference Include="Microsoft.AspNetCore.Hosting.Abstractions" Version="2.2.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="3.1.8" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Analystor.Nishomi.Persistence\Analystor.Nishomi.Persistence.csproj" />
   </ItemGroup>
 
 </Project>
