API s for Nishomi

--- a/Services/Analystor.Nishomi.Api/appsettings.json
+++ b/Services/Analystor.Nishomi.Api/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "NishomiDbContext": "Data Source=localhost;Initial Catalog=Nishomi;User ID=root;Password=1234"
+  }
 }
