Email client set up in api

--- a/Services/Analystor.Nishomi.Api/appsettings.json
+++ b/Services/Analystor.Nishomi.Api/appsettings.json
@@ -9,5 +9,14 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "NishomiDbContext": "Data Source=localhost;Initial Catalog=Nishomi;User ID=root;Password=1234"
+  },
+  "Email": {
+    "Smtp": {
+      "Host": "smtp.sendgrid.net",
+      "Port": 587,
+      "Username": "apikey",
+      "Password": "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"
+      //"Password": "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"
+    }
   }
 }
