--- a/Core/Analystor.Nishomi.Core/Analystor.Nishomi.Core.csproj
+++ b/Core/Analystor.Nishomi.Core/Analystor.Nishomi.Core.csproj
@@ -5,8 +5,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="MailKit" Version="2.9.0" />
     <PackageReference Include="Microsoft.AspNetCore.Hosting.Abstractions" Version="2.2.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="3.1.8" />
+    <PackageReference Include="MimeKit" Version="2.9.2" />
+    <PackageReference Include="SendGrid" Version="9.21.0" />
   </ItemGroup>
 
   <ItemGroup>
