Implemente Exception handler in nishomi api

--- a/Services/Analystor.Nishomi.Api/appsettings.Development.json
+++ b/Services/Analystor.Nishomi.Api/appsettings.Development.json
@@ -1,9 +1,18 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
+  "Serilog": {
+    "MinimumLevel": "Information",
+    "WriteTo": [
+      {
+        "Name": "MySQL",
+        "Args": {
+          "connectionString": "Data Source=localhost;Initial Catalog=Nishomi;User ID=root;Password=1234",
+          "tableName": "Api-Log",
+          "autoCreateSqlTable": true
+        }
+      }
+    ],
+    "Properties": {
+      "Application": "Analystor Nishomi"
     }
   }
 }
