--- a/Web/package.json
+++ b/Web/package.json
@@ -24,6 +24,8 @@
     "@ng-bootstrap/ng-bootstrap": "^7.0.0",
     "angular2-useful-swiper": "^8.0.1-beta.1",
     "hammerjs": "^2.0.8",
+    "jquery": "^3.5.1",
+    "ngx-img-zoom": "^4.1.2",
     "ngx-swiper-wrapper": "^10.0.0",
     "ngx-useful-swiper": "^9.0.5",
     "rxjs": "~6.6.0",
@@ -32,7 +34,7 @@
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1001.3",
+    "@angular-devkit/build-angular": "^0.1001.7",
     "@angular/cli": "~10.1.3",
     "@angular/compiler-cli": "~10.1.3",
     "@types/jasmine": "~3.5.0",
