--- a/Web/angular.json
+++ b/Web/angular.json
@@ -24,10 +24,16 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "node_modules/slick-carousel/slick/slick.scss",
+              "node_modules/slick-carousel/slick/slick-theme.scss"
             ],
             "scripts": [
-              "./node_modules/hammerjs/hammer.js"
+              "./node_modules/hammerjs/hammer.js",
+              "node_modules/jquery/dist/jquery.min.js",
+              "node_modules/slick-carousel/slick/slick.min.js",
+              "src/assets/js/easyzoom.js",
+              "src/assets/js/slick.min.js"
             ]
           },
           "configurations": {
