--- a/Web/package.json
+++ b/Web/package.json
@@ -25,10 +25,14 @@
     "angular2-useful-swiper": "^8.0.1-beta.1",
     "hammerjs": "^2.0.8",
     "jquery": "^3.5.1",
+    "ngx-image-zoom": "^0.3.4",
     "ngx-img-zoom": "^4.1.2",
+    "ngx-slick-carousel": "^0.5.1",
     "ngx-swiper-wrapper": "^10.0.0",
     "ngx-useful-swiper": "^9.0.5",
     "rxjs": "~6.6.0",
+    "slick-carousel": "^1.8.1",
+    "sweetalert2": "^10.9.0",
     "swiper": "^6.3.2",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
