--- a/Web/angular.json
+++ b/Web/angular.json
@@ -33,7 +33,8 @@
               "node_modules/jquery/dist/jquery.min.js",
               "node_modules/slick-carousel/slick/slick.min.js",
               "src/assets/js/easyzoom.js",
-              "src/assets/js/slick.min.js"
+              "src/assets/js/slick.min.js",
+              "src/assets/js/swiper-bundle.min.js.map"
             ]
           },
           "configurations": {
