--- a/Web/angular.json
+++ b/Web/angular.json
@@ -23,10 +23,21 @@
               "src/favicon.ico",
               "src/assets"
             ],
+            "extractCss": true,
             "styles": [
               "src/styles.css",
               "node_modules/slick-carousel/slick/slick.scss",
-              "node_modules/slick-carousel/slick/slick-theme.scss"
+              "node_modules/slick-carousel/slick/slick-theme.scss",
+              {
+                "input": "src/styles-ar.css",
+                "bundleName": "arabicStyles",
+                "lazy": true
+              },
+              {
+               "input": "src/styles-en.css",
+               "bundleName": "englishStyles",
+               "lazy": true
+              }
             ],
             "scripts": [
               "./node_modules/hammerjs/hammer.js",
