--- a/Web/package.json
+++ b/Web/package.json
@@ -22,6 +22,8 @@
     "@angular/platform-browser-dynamic": "~10.1.3",
     "@angular/router": "~10.1.3",
     "@ng-bootstrap/ng-bootstrap": "^7.0.0",
+    "@ngx-translate/core": "^13.0.0",
+    "@ngx-translate/http-loader": "^6.0.0",
     "angular2-useful-swiper": "^8.0.1-beta.1",
     "hammerjs": "^2.0.8",
     "jquery": "^3.5.1",
