--- a/Web/angular.json
+++ b/Web/angular.json
@@ -28,6 +28,8 @@
               "src/styles.css",
               "node_modules/slick-carousel/slick/slick.scss",
               "node_modules/slick-carousel/slick/slick-theme.scss",
+              "node_modules/font-awesome/css/font-awesome.css",
+              "node_modules/font-awesome-animation/dist/font-awesome-animation.min.css",
               {
                 "input": "src/styles-ar.css",
                 "bundleName": "arabicStyles",
