--- a/Web/package.json
+++ b/Web/package.json
@@ -25,6 +25,8 @@
     "@ngx-translate/core": "^13.0.0",
     "@ngx-translate/http-loader": "^6.0.0",
     "angular2-useful-swiper": "^8.0.1-beta.1",
+    "font-awesome": "^4.7.0",
+    "font-awesome-animation": "^0.2.1",
     "hammerjs": "^2.0.8",
     "jquery": "^3.5.1",
     "ngx-image-zoom": "^0.3.4",
