--- a/Web/angular.json
+++ b/Web/angular.json
@@ -30,6 +30,7 @@
               "node_modules/slick-carousel/slick/slick-theme.scss",
               "node_modules/font-awesome/css/font-awesome.css",
               "node_modules/font-awesome-animation/dist/font-awesome-animation.min.css",
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
               {
                 "input": "src/styles-ar.css",
                 "bundleName": "arabicStyles",
@@ -62,21 +63,21 @@
               "optimization": true,
               "outputHashing": "all",
               "sourceMap": false,
-              "extractCss": true,
+              "extractCss": false,
               "namedChunks": false,
-              "extractLicenses": true,
+              "extractLicenses": false,
               "vendorChunk": false,
               "buildOptimizer": true,
               "budgets": [
                 {
                   "type": "initial",
-                  "maximumWarning": "2mb",
-                  "maximumError": "5mb"
+                  "maximumWarning": "20mb",
+                  "maximumError": "50mb"
                 },
                 {
                   "type": "anyComponentStyle",
-                  "maximumWarning": "6kb",
-                  "maximumError": "10kb"
+                  "maximumWarning": "60kb",
+                  "maximumError": "100kb"
                 }
               ]
             }
