Enabled container orchestration using docker-compose

--- a/Services/Analystor.Nishomi.Admin/Analystor.Nishomi.Admin.csproj
+++ b/Services/Analystor.Nishomi.Admin/Analystor.Nishomi.Admin.csproj
@@ -6,6 +6,7 @@
     <UserSecretsId>fb8e7ac8-dc02-465d-a053-b1110a10083a</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     <DockerfileContext>..\..</DockerfileContext>
+    <DockerComposeProjectPath>..\..\docker-compose.dcproj</DockerComposeProjectPath>
   </PropertyGroup>
 
   <ItemGroup>
