--- a/Services/Analystor.Nishomi.Api/Analystor.Nishomi.Api.csproj
+++ b/Services/Analystor.Nishomi.Api/Analystor.Nishomi.Api.csproj
@@ -6,6 +6,7 @@
     <UserSecretsId>43727be6-7ce6-4f0f-abe8-56b12e89722b</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     <DockerfileContext>..\..</DockerfileContext>
+    <DockerComposeProjectPath>..\..\docker-compose.dcproj</DockerComposeProjectPath>
   </PropertyGroup>
 
   <ItemGroup>
