--- a/Services/Analystor.Nishomi.Api/appsettings.Production.json
+++ b/Services/Analystor.Nishomi.Api/appsettings.Production.json
@@ -8,7 +8,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "EniticsDbContext": "Data Source=localhost;Initial Catalog=Nishomi;User ID=root;Password=analystor@123"
+    "EniticsDbContext": "Data Source=172.31.27.231;Initial Catalog=Nishomi;User ID=root;Password=analystor@123"
   },
   "Serilog": {
     "MinimumLevel": "Information",
