--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -17,8 +17,7 @@ services:
     build:
       network: host
     volumes:
-      - ${APPDATA}/Microsoft/UserSecrets:/root/.microsoft/usersecrets:ro
-      - ${APPDATA}/ASP.NET/Https:/root/.aspnet/https:ro
+      - /home/ubuntu/nishomi-resources:/app/wwwroot/Resources
   analystor.nishomi.api:
     restart: always
     environment:
@@ -28,6 +27,3 @@ services:
       - "82:80"
     build:
       network: host
-    volumes:
-      - ${APPDATA}/Microsoft/UserSecrets:/root/.microsoft/usersecrets:ro
-      - ${APPDATA}/ASP.NET/Https:/root/.aspnet/https:ro
