--- a/Analystor.Nishomi.Admin/Analystor.Nishomi.Admin.csproj
+++ b/Analystor.Nishomi.Admin/Analystor.Nishomi.Admin.csproj
@@ -1,8 +1,11 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
-
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
-    <UserSecretsId>aspnet-WebApplication2-689BBED6-5ECE-4F4F-80B8-171A8966D849</UserSecretsId>
+    <LangVersion>8.0</LangVersion>
+    <UserSecretsId>fb8e7ac8-dc02-465d-a053-b1110a10083a</UserSecretsId>
+    <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+    <DockerfileContext>..\..</DockerfileContext>
+    <DockerComposeProjectPath>..\..\docker-compose.dcproj</DockerComposeProjectPath>
   </PropertyGroup>
 
   <ItemGroup>
