--- a/Analystor.Nishomi.Admin/Dockerfile
+++ b/Analystor.Nishomi.Admin/Dockerfile
@@ -6,7 +6,7 @@ EXPOSE 80
 
 FROM mcr.microsoft.com/dotnet/core/sdk:3.1-buster AS build
 WORKDIR /src
-COPY ["Services/Analystor.Nishomi.Admin/Analystor.Nishomi.Admin.csproj", "Services/Analystor.Nishomi.Admin/"]
+COPY ["Analystor.Nishomi.Admin/Analystor.Nishomi.Admin.csproj", "Analystor.Nishomi.Admin/"]
 COPY ["Analystor.Nishomi.Common/Analystor.Nishomi.Common.csproj", "Analystor.Nishomi.Common/"]
 COPY ["Core/Analystor.Nishomi.Core/Analystor.Nishomi.Core.csproj", "Core/Analystor.Nishomi.Core/"]
 COPY ["Core/Analystor.Nishomi.Persistence/Analystor.Nishomi.Persistence.csproj", "Core/Analystor.Nishomi.Persistence/"]
