Fixes in backup jobs

--- a/Analystor.Nishomi.Jobs/appsettings.json
+++ b/Analystor.Nishomi.Jobs/appsettings.json
@@ -7,8 +7,8 @@
     }
   },
   "AllowedHosts": "*",
-  "FilePath": "D:\\SourceTree\\Nishomi-New\\Services\\Analystor.Nishomi.Admin\\wwwroot\\Resources",//need to replace production server resource path
+  "FilePath": "/home/ubuntu/nishomi-resources", //need to replace production server resource path
   "ConnectionStrings": {
-    "NishomiDbContext": "Data Source=172.31.27.231;Initial Catalog=Nishomi;User ID=root;Password=analystor@123" // need to replace production
+    "NishomiDbContext": "Data Source=65.0.68.82;Initial Catalog=Nishomi;User ID=root;Password=analystor@123" // need to replace production
   }
 }
