staging docker file updated and connection string changes

--- a/Services/Analystor.Nishomi.Admin/appsettings.Production.json
+++ b/Services/Analystor.Nishomi.Admin/appsettings.Production.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "NishomiDbContext": "Data Source=172.31.27.231;Initial Catalog=Nishomi;User ID=root;Password=analystor@123"
+    "NishomiDbContext": "Data Source=172.31.20.65;Port=6033;Initial Catalog=Nishomi;User ID=root;Password=navigmate@123"
   }
 }
