--- a/Services/Analystor.Nishomi.Api/appsettings.Production.json
+++ b/Services/Analystor.Nishomi.Api/appsettings.Production.json
@@ -8,7 +8,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "NishomiDbContext": "Data Source=172.31.27.231;Initial Catalog=Nishomi;User ID=root;Password=analystor@123"
+    "NishomiDbContext": "Data Source=172.31.20.65;Port=6033;Initial Catalog=Nishomi;User ID=root;Password=navigmate@123"
   },
   "Serilog": {
     "MinimumLevel": "Information",
@@ -16,7 +16,7 @@
       {
         "Name": "MySQL",
         "Args": {
-          "connectionString": "Data Source=172.31.27.231;Initial Catalog=Nishomi;User ID=root;Password=analystor@123",
+          "connectionString": "Data Source=172.31.20.65;Port=6033;Initial Catalog=Nishomi;User ID=root;Password=navigmate@123",
           "tableName": "Api-Log",
           "autoCreateSqlTable": true
         }
