--- a/Services/Analystor.Nishomi.Admin/appsettings.json
+++ b/Services/Analystor.Nishomi.Admin/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "NishomiDbContext": "Data Source=localhost;Initial Catalog=Nishomi;User ID=root;Password=1234"
+    "NishomiDbContext": "Data Source=172.31.20.65;Port=6033;Initial Catalog=Nishomi;User ID=root;Password=navigmate@123"
   }
 }
