--- a/docker-compose.staging.yml
+++ b/docker-compose.staging.yml
@@ -7,7 +7,7 @@ services:
       - ASPNETCORE_ENVIRONMENT=Staging
       - ASPNETCORE_URLS=http://+:80
     ports:
-      - "8600:80"
+      - "8600:80/Admin"
     build:
       network: host
     volumes:
@@ -18,6 +18,6 @@ services:
       - ASPNETCORE_ENVIRONMENT=Staging
       - ASPNETCORE_URLS=http://+:80
     ports:
-      - "8601:80"
+      - "8600:80/Service"
     build:
       network: host
